--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <br>
             Charlie Hou is a sophomore in the ORFE department.  He enjoys writing amateur fiction.
             <br>
-            Gerry Wan is a sophomore in the ELE department.  His girlfriend is Taiwanese.
+            Gerry Wan is a sophomore in the ELE department.  He once fractured a finger while swimming.
 
         </p>
     </div>
