better fun fact for gerry

--- a/index.html
+++ b/index.html
@@ -114,8 +114,7 @@
             <br>
             Charlie Hou is a sophomore in the ORFE department.  He enjoys writing amateur fiction.
             <br>
-            Gerry Wan is a sophomore in the ELE department.  He once fractured a finger while swimming.
-
+            Gerry Wan is a sophomore in the ELE department.  He an avid citrus snob and understands the dangers of scurvy more than anyone.
         </p>
     </div>
     <div class="end">
