--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div style="text-align: center;">
             <div id="moods_div"></div>
             <br>
-            <p class = "description"> Using Microsoft's Cognitive Services API, we quantified Obama's mood using a picture found with <br>Bing's search API.  
+            <p class = "description"> Using Microsoft's Cognitive Services API, we quantified Obama's mood using pictures found with <br>Bing's search API.  
             We then aggregated the data, which took around an hour to process, into this graph.</p>
         </div>
     </section>
