--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <br>
             Charlie Hou is a sophomore in the ORFE department.  He enjoys writing amateur fiction.
             <br>
-            Gerry Wan is a sophomore in the ELE department.  He is an avid citrus snob and understands the dangers of scurvy better than anyone.
+            Gerry Wan is a sophomore in the ELE department.  He is an avid citrus snob and understands the wonders of oranges better than anyone.
         </p>
     </div>
     <div class="end">
